# needle

./: .gitignore  README.md  abstract.py  app.py  pyproject.toml  tst.di.py  tst.pydantic-check-type.py
docs/: DEPENDENT.md
needle/: __init__.py  api.py  dependent.py  errors.py  injector.py  solved.py  typing.py  utils.py
tests/: test_dependent.py  test_injector.py  test_solved.py  test_utils.py
