[tool.poetry]
name = "needle"
version = "0.1.0"
description = "Dependency Injection for Python"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
mypy = "^1.1.1"
black = "^23.3.0"
pytest = "^7.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
